                    FaradayCup Changelog
                    --------------------

26 Nov 2014: Shaun Marshall
- Separating Borovsky/Heidelberg branches
- Specs adjustment
- Removed second run invokation in BuildForMaster

18 November 2014: Shaun Marshall
- (Fixed) Loop through beam energies, append charge file
- Gold standard (hehehe); Specs listed under docs

7 November 2014: Shaun Marshall
- (Broken) Appended experimental energies, copper dimension(s)

5 November 2014: Shaun Marshall
- Change silly delimeter mistake, readability cleanup

4 November 2014: Shaun Marshall
- Move tally file populating to SteppingAction (dynamic collection)

2 November 2014: Shaun Marshall
- Cu/KA netCharge bins (KA linearly proportional)

30 Oct 2014: Shaun Marshall
- Corrected data directory construction

29 Oct 2014: Shaun Marshall
- Cleanup of the working model