@@ -11,11 +11,6 @@
 /gui/addMenu file File
 /gui/addButton file Quit exit
 #
-# Run menu :
-/gui/addMenu run Run
-/gui/addButton run "beamOn 1" "/run/beamOn 1"
-/gui/addButton run run1 "/control/execute run1.mac"
-#
 # Gun menu :
 /gui/addMenu gun Gun
 /gui/addButton gun "50 MeV"  "/gun/energy 50 MeV"
@@ -47,4 +42,4 @@
 /run/printProgress 100
 #
 # User defined icon :
-/gui/addIcon "Run beam on" user_icon "/run/beamOn 1" run.png 
+/gui/addIcon "Run beam on" user_icon "/control/execute run.mac" run.png 
