@@ -14,7 +14,7 @@
 # Run menu :
 /gui/addMenu run Run
 /gui/addButton run "beamOn 1" "/run/beamOn 1"
-/gui/addButton run run1 "/control/execute run1.mac"
+/gui/addButton run "ProtonBeam" "/control/execute run.in"
 #
 # Gun menu :
 /gui/addMenu gun Gun
