@@ -1,6 +1,9 @@
                     FaradayCup Changelog
                     --------------------
 
+6 Dec 2014: Shaun Marshall
+- Visualizer, macro and input cleanup
+
 26 Nov 2014: Shaun Marshall
 - Separating Borovsky/Heidelberg branches
 - Specs adjustment
